fix(Tooltip): text alignment for short text (#3084)

--- a/packages/dnb-eufemia/src/components/tooltip/style/dnb-tooltip.scss
+++ b/packages/dnb-eufemia/src/components/tooltip/style/dnb-tooltip.scss
@@ -22,6 +22,8 @@
   padding: 0 1rem;
   color: var(--tooltip-color);
 
+  text-align: center;
+
   background-color: var(--tooltip-background-color);
   border-radius: var(--tooltip-border-radius);
   @include defaultDropShadow();
